<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/yuanjiao"
            android:gravity="center"
            android:hint="@string/login_phone_text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/yuanjiao"
            android:gravity="center"
            android:hint="@string/login_password_text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_yuanjiao"
            android:text="@string/login_login_text"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_text"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_password_text"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_quick_text"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_launcher_background"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_quick_text"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_launcher_background"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_quick_text"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_launcher_background"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_quick_text"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>